hphp/hack/test/typecheck/assign_array_unresolved_bad.php.exp
File "assign_array_unresolved_bad.php", line 12, characters 3-12:
Invalid assignment (Typing[4110])
File "assign_array_unresolved_bad.php", line 4, characters 31-33:
This is a num (int/float)
File "assign_array_unresolved_bad.php", line 4, characters 61-66:
It is incompatible with a string
